--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
 	background-color: #f5f0ea;
 	color: #333;
 	font-family: 'Noto Sans JP', 'ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
-	
+
 }
 body{
 	margin: 0;
@@ -134,7 +134,7 @@ th:last-child{
 }
 tr td {
 	height: 2rem;
-	padding: .25rem .5rem;
+	/*padding: .25rem .5rem;*/
 	border-right-width: 1px;
 	border-right-style: solid;
 	border-right-color: dodgerblue;
@@ -147,10 +147,10 @@ tr td {
 	border-left-style: solid;
 	border-left-color: dodgerblue;
 }
-tr.sat{
+tr.Sat{
 	background-color:#a0d8ef;
 }
-tr.sun{
+tr.Sun{
 	background-color:#ffc0cb;
 }
 .trna{
