--- a/public/style.css
+++ b/public/style.css
@@ -82,7 +82,7 @@ button.yhhb{
 div.boya{
 	margin: 1rem;
 }
-button{
+button, input[type="submit"]{
 	background: linear-gradient(#D00, #000);
 	border: 1.5px;
 	border-radius: 1rem;
@@ -93,10 +93,10 @@ button{
 	box-shadow: 2px 2px 2px rgba(0,0,0,.4);
 	vertical-align: middle;
 }
-button:hover, a.lbtn:hover{
+button:hover, a.lbtn:hover, input[type="submit"]:hover{
 	background: linear-gradient(#F00, #222);
 }
-button:active, a.lbtn:active{
+button:active, a.lbtn:active, input[type="submit"]:active{
 	box-shadow: none;
 	position: relative;
 	top: 1px;
@@ -161,7 +161,7 @@ tr.Sun{
 	text-align: left;
 	min-width: 16rem;
 }
-button.rbtn{
+button.rbtn, input[type="submit"].rbtn{
 	width: 6rem;
 }
 div.htle{
