--- a/public/style.css
+++ b/public/style.css
@@ -95,6 +95,11 @@ table {
 	border-spacing: 0;
 	overflow: hidden;
 }
+@media screen and(max-width: 600px){
+    table{
+        width: 100%;
+    }
+}
 th {
 	padding: 12px 20px;
 	background: linear-gradient(#D00, #000);
@@ -151,7 +156,7 @@ tr.Sun{
 }
 .trbi{
 	text-align: left;
-	min-width: 16rem;
+	min-width: 10rem;
 }
 button.rbtn, input[type="submit"].rbtn{
 	width: 6rem;
