--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,6 @@ header{
 	background: linear-gradient(#D00, #000);
 	height: 3.5rem;
 	width: 100%;
-	color: white;
 	display: table;
 }
 span.nama{
@@ -62,7 +61,7 @@ select:hover{
 option{
 	font-size: 12pt;
 }
-input[type="submit"].yhhb{
+input[type="submit"].yhhb, button.yhhb{
 	vertical-align: bottom;
     font-size: 14pt;
 	padding: .14rem 1rem;
@@ -73,7 +72,7 @@ input[type="submit"].yhhb{
 div.boya{
 	margin: 1rem;
 }
-input[type="submit"]{
+input[type="submit"], button{
 	background: linear-gradient(#D00, #000);
 	border: 1.5px;
 	border-radius: 1rem;
@@ -84,10 +83,10 @@ input[type="submit"]{
 	box-shadow: 2px 2px 2px rgba(0,0,0,.4);
 	vertical-align: top;
 }
-input[type="submit"]:hover{
+input[type="submit"]:hover, button:hover{
 	background: linear-gradient(#F00, #222);
 }
-input[type="submit"]:active{
+input[type="submit"]:active, button:active{
 	box-shadow: none;
 	position: relative;
 	top: 1px;
